=== HEAD

* Add support for connecting to Apache Derby databases using the jdbc adapter (jeremyevans)

* Add support for connecting to HSQLDB databases using the jdbc adapter (jeremyevans)

* Fix inserting all default values into a table on DB2 (jeremyevans)

* Add :qualify option to many_to_one associations for whether to qualify the primary key column with the associated table (jeremyevans)

* Modify rcte_tree plugin to use column aliases if recursive CTEs require them (jeremyevans)

* Add Dataset#recursive_cte_requires_column_aliases? method to check if you must provide an argument list for a recursive CTE (jeremyevans)

* Much better support for Oracle in both the oci8-based oracle adapter and the jdbc oracle subadapter (jeremyevans)

* Handle CTEs in subselects in more places on databases that don't natively support CTEs in subselects (jeremyevans)

* Change Dataset#to_hash to not call the row_proc if 2 arguments are given (jeremyevans)

* Change Dataset#map to not call the row_proc if an argument is given (jeremyevans)

* Make Dataset#select_map and #select_order_map return an array of single element arrays if given an array with a single symbol (jeremyevans)

* Make Dataset#columns work correctly on jdbc, odbc, ado, and dbi adapters when using an emulated offset on MSSQL and DB2 (jeremyevans)

* Add Database#listen and #notify to the postgres adapter, for LISTEN and NOTIFY support (jeremyevans)

* Emulate the bitwise compliment operator on h2 (jeremyevans)

* Fix improper handling of emulated bitwise operators with more than two arguments (jeremyevans)

* Allow convert_invalid_date_time to be set on a per-Database basis in the mysql adapter (jeremyevans)

* Allow convert_tinyint_to_bool to be set on a per-Database basis in the mysql and mysql2 adapters (jeremyevans)

* Allow per-Database override of the typeconversion procs on the mysql, sqlite, and ibmdb adapters (jeremyevans)
