@@ -1,5 +1,7 @@
 === HEAD
 
+* Raising Sequel::Rollback inside a transaction causes the transaction to return the exception (jeremyevans)
+
 * Add support for connecting to Apache Derby databases using the jdbc adapter (jeremyevans)
 
 * Add support for connecting to HSQLDB databases using the jdbc adapter (jeremyevans)
